# libthairs

./: .gitignore  Cargo.toml  build.rs
c_test/: Makefile  README.md  test_thbrk.c
cdatrie/: Cargo.toml  LICENSE  README.md  build.rs  wrapper.h
cdatrie/src/: binding.rs  lib.rs  trie.rs  trieiter.rs  triestate.rs  types.rs
data/: libthai.map
datrie/: .gitignore  Cargo.toml  PKGBUILD  README.md  build.rs
datrie-old/: .gitignore  README.md  build.rs  flake.nix  libdatrie.map
datrie-old/src/: alphamap.rs  alphamaploader.rs  darray.rs  darrayloader.rs  lib.rs  symbols.rs  tailloader.rs  trie.rs
datrie-old/src/cffi/: alphachar.rs  trie.rs  triestate.rs
datrie/src/: alpha_map.rs  alpha_range.rs  alphamap.rs  alphamaploader.rs  darray.rs  darrayloader.rs  dstring.rs  fileutils.rs  lib.rs  symbols.rs  tail.rs  tailloader.rs  test.rs  test_cdatrie.rs  test_utils.rs  testutils.rs  trie.rs  trie_iter_test.rs  trie_string.rs  trie_test.rs  types.rs  types_c.rs
datrie/src/cffi/: alphachar.rs  alphamap.rs  mod.rs  trie.rs  trieiter.rs
datrie/src/ctest/: mod.rs  test_byte_alpha.c  test_byte_list.c  test_file.c  test_iterator.c  test_nonalpha.c  test_null_trie.c  test_serialization.c  test_store-retrieve.c  test_term_state.c  test_walk.c  utils.c  utils.h
datrie/src/tests/: test_byte_alpha.rs  test_byte_list.rs  test_file.rs  test_iterator.rs  test_nonalpha.rs  test_null_trie.rs  test_serialization.rs  test_store_retrieve.rs  test_term_state.rs  test_walk.rs  utils.rs
datrie/src/tools/: trietool.rs
include/: thailib.h
src/: ctype.rs  cursor.rs  lib.rs  str.rs  tis.rs  utils.rs  wchar.rs  wctype.rs  wstr.rs  wtt.rs
src/data/: ctype.rs  mod.rs  tis.rs
src/src/thbrk/: brk_common.rs  brk_ctype.rs  thbrk.rs
src/src/thcoll/: cweight.rs  thcoll.rs
src/src/thctype/: thctype.rs  wtt.rs
src/src/thinp/: thinp.rs
src/src/thrend/: thrend.rs
src/src/thwbrk/: thwbrk.rs
src/tests/: test_thbrk.rs  test_thcell.rs  test_thctype.rs  test_thinp.rs  test_thrend.rs  test_thstr.rs  test_thwbrk.rs  test_thwchar.rs  thsort.rs
src/thbrk/: brkpos.rs  c_api.rs  c_tis_api.rs  c_w_api.rs  common.rs  ctype.rs  data.rs  maximal.rs  mod.rs  test.rs
src/thbrk/datrie/: breaker.rs  loader.rs  maximal.rs  mod.rs
src/thcell/: thcell.rs
src/thctype/: mod.rs  wtt.rs
src/thstr/: thstr.rs
src/thwchar/: c_api.rs  data.rs  mod.rs  test_mac_sample.txt  test_tis_sample.txt  test_win_sample.txt  thwchar.rs
src/thwctype/: thwctype.rs
src/thwstr/: thwstr.rs
