[package]
name = "thai"
version = "0.1.0"
edition = "2021"
license = "LGPL-2.1-or-later"
repository = "https://github.com/whs/libthairs"

[features]
default = ["cffi"]
cffi = ["dep:libc", "dep:null-terminated"]

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
libc = { version = "0.2", optional = true }
null-terminated = { version = "0.3.17", optional = true }
widestring = "1.1.0"

[dependencies.datrie]
path = "../libdatrie-rs"
#git = "https://github.com/whs/libdatrie-rs.git"
default-features = false
features = ["std"]

[build-dependencies]
cbindgen = "0.27.0"

[profile.release-debug]
inherits = "release"
debug = true
strip = "none"
