[package]
name = "datrie"
version = "0.1.0"
edition = "2021"
license = "LGPL-2.1"

[lib]
crate-type = ["cdylib"]

[dependencies]
libc = "0.2"
null-terminated = "0.3.17"
byteorder = "1"
cstream = "0.1.4"
rangemap = "1.5.1"
arrayvec = "0.7.4"

[profile.release-debug]
inherits = "release"
debug = true
strip = "none"