[package]
name = "datrie"
version = "0.1.0"
edition = "2021"
license = "LGPL-2.1"

[features]
default = ["cffi"]
cffi = ["dep:libc", "dep:null-terminated", "dep:cstream"]
ctest = ["dep:cc", "cffi"]
bin = ["dep:clap", "clap/derive", "dep:regex"]

[lib]
crate-type = ["cdylib", "lib"]

[[bin]]
name = "trietool"
required-features = ["bin"]

[dependencies]
libc = { version = "0.2", optional = true }
null-terminated = { version = "0.3.17", optional = true }
byteorder = "1"
cstream = { version = "0.1.4", optional = true }
rangemap = "1.5.1"
arrayvec = "0.7.4"
clap = { version = "4.5.13", optional = true }
regex = { version = "1.10.5", optional = true }

[dev-dependencies]
serial_test = "3.1.1"

[build-dependencies]
cbindgen = "0.26.0"
cc = { version = "1.1.7", optional = true }

[profile.release-debug]
inherits = "release"
debug = true
strip = "none"
